--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/ParvTiwari/DineFlow/issues"
   },
-  "homepage": "https://github.com/ParvTiwari/DineFlow#readme"
+  "homepage": "https://github.com/ParvTiwari/DineFlow#readme",
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^5.1.0"
+  }
 }
