--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/ParvTiwari/DineFlow#readme",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "method-override": "^3.0.0",
+    "mysql2": "^3.14.1"
   }
 }
